--- a/wiki/Ubuntu_-_Configuring_For_Programming.wiki
+++ b/wiki/Ubuntu_-_Configuring_For_Programming.wiki
@@ -1,7 +1,18 @@
-[[Image:Ubuntu-logox45.png|right]]This is a checklist and a set of tips on setting up a complete ubuntu
-installation suitable for software development and scientific research.
+[[Image:Ubuntu-logox45.png|right]]This is a checklist and a set of tips on setting up a complete ubuntu installation suitable for software development and scientific research.  
 
-These instructions were tested on Ubuntu 12.04, 11.10 but are almost the same for 11.04.
+These instructions were tested on Ubuntu 15.04 but are almost the same for 12.04, 11.10, down to 11.04.
+
+==Partitioning for Programming==
+
+For programming, I use the following partition guidelines
+* <tt>/</tt> : from 20 to 100GB (usually a full-fledged Ubuntu install for multimedia development will consume 16GB, from my experience)
+* <tt>/linux2</tt> : I place another Linux partition here, so that I can have 2 linux distros. The size is the same guidelines as I mentioned above for '/'.
+* <tt>/home</tt> : your files - put 
+* Swap: if you do heavy simulations, double your RAM is a good rule of thumb here; otherwise, you'll do fine with just a couple GB here.
+
+File system: choose ext4, it performs very well on most circumstances.
+
+In the case of internal SSD
 
 
 
